[tool.poetry]
name = "cabrillo"
version = "1.0.0"
description = "A library to parse and construct Cabrillo (v3) logs."
authors = ["ranguli <hello@joshmurphy.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
nox = "^2022.11.21"
bandit = "^1.7.4"
isort = "^5.10.1"
nox-poetry = "^1.0.2"
loguru = "^0.6.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
